@@ -43,7 +43,7 @@ namespace ACE
     int StreamBuffer::read_from_stream_i (char* buffer, std::streamsize length)
       {
         this->stream_.read (buffer, length);
-        return this->stream_.gcount ();
+        return static_cast<int> (this->stream_.gcount ());
       }
 
     int StreamBuffer::write_to_stream (const char* buffer, std::streamsize length)
@@ -57,7 +57,7 @@ namespace ACE
     int StreamBuffer::write_to_stream_i (const char* buffer, std::streamsize length)
       {
         this->stream_.write (buffer, length);
-        return this->stream_.good () ? length : -1;
+        return this->stream_.good () ? static_cast<int> (length) : -1;
       }
 
     int StreamBuffer::sync ()
