@@ -272,7 +272,7 @@ namespace ACE
               }
           }
 
-        return recv_char_count / char_size;
+        return static_cast<int> (recv_char_count / char_size);
       }
 
     // This method makes sure to only ever copy full char_size elements
@@ -384,7 +384,7 @@ namespace ACE
             timeout_countdown.stop ();
           }
 
-        return recv_char_count;
+        return static_cast<int> (recv_char_count);
       }
 
     template <ACE_PEER_STREAM_1, ACE_SYNCH_DECL>
@@ -475,7 +475,7 @@ namespace ACE
                   {
                     this->reactor ()->remove_handler (this, ACE_Event_Handler::WRITE_MASK);
                     this->send_timeout_ = true;
-                    return (length - (this->msg_queue ()->message_bytes () / char_size));
+                    return static_cast<int> (length - (this->msg_queue ()->message_bytes () / char_size));
                   }
 
                 // Other errors? If so, stop running the loop.
@@ -508,7 +508,7 @@ namespace ACE
                     && max_wait_time == ACE_Time_Value::zero)
                   {
                     this->send_timeout_ = true;
-                    return (length - (this->msg_queue ()->message_bytes () / char_size));
+                    return static_cast<int> (length - (this->msg_queue ()->message_bytes () / char_size));
                   }
 
                 // Otherwise, keep going...
@@ -516,9 +516,9 @@ namespace ACE
           }
 
         if (this->connected_)
-          return length; // all sent
+          return static_cast<int> (length); // all sent
         else
-          return (length - (this->msg_queue ()->message_bytes () / char_size));
+          return static_cast<int> (length - (this->msg_queue ()->message_bytes () / char_size));
       }
 
     template <ACE_PEER_STREAM_1, ACE_SYNCH_DECL>
