@@ -70,7 +70,7 @@ namespace ACE
               }
             ACE_OS::memmove (buffer, &(*this->string_ref_)[this->rd_ptr_], length * sizeof (char_type));
             this->rd_ptr_ += length;
-            n = length;
+            n = static_cast<int> (length);
           }
         return n;
       }
@@ -82,7 +82,7 @@ namespace ACE
         if (this->string_ref_)
           {
             this->string_ref_->append (buffer, length);
-            n = length;
+            n = static_cast<int> (length);
           }
         return n;
       }
