@@ -1,3 +1,10 @@
+Tue Jun 08 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+	* protocols/ace/INet/StreamHandler.cpp:
+	* protocols/ace/INet/String_IOStream.cpp:
+	* protocols/ace/INet/HTTP_IOStream.cpp:
+	  Changes to silence conversion warnings.
+
 Tue Jun 08 07:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>
 
 	* protocols/ace/INet/StreamHandler.h:
